// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureFeed should get a specific feed 1`] = `
Object {
  "data": Object {
    "node": Object {
      "features": Array [
        Object {
          "id": "HorizontalCardListFeature:9724110384a5109532f35a4980ea9b7732b56327ff3959d32d21ba892a0dc56083e6e9fbc0eb9c30e70418ef51dbf0a0a206c0039dd9ab293a5df0c1f07cdf27809952c976cf9886f157a1265307677bc875f2abdcfce4136c7ce952bc293761e816c7f3829d43e2b54a3297a1add52b",
        },
        Object {
          "id": "ActionListFeature:f6b30a38eb547f1f75676ce0557a7e05bed66de665564bd0c5e37f069267679550e6d23b01e068694595ba074cd0d145c3508d6249fc0adc58f325fa1e4621dfa28d6be47ee5711bc3110dd8c31d1e045c223357732b6f15ebde1237763d712279d3ab620bf416ae9a035a0ba171e5c4fecb9bfcb5ea92ea44148d7bd6731a9158ce9af2e56cb4be9ee86a3d8638a111",
        },
      ],
    },
  },
}
`;

exports[`FeatureFeed should query the discover feed 1`] = `
Object {
  "data": Object {
    "discoverFeedFeatures": Object {
      "features": Array [
        Object {
          "id": "ActionListFeature:9724110384a5109532f35a4980ea9b77fc68ca68b7328a1dac42af2e6dfe37074ceb118d009211aca8e387fb33b75fb89c4cbce255eaf4a729fdbff3fa4ef4a8",
        },
      ],
      "id": "FeatureFeed:c7035fd9677aa209cd4613df53e9c83a0fb3b9ecd853808383d135407161a17bc75b8c451176e861b2ade040817c1b9da6fbfe9c93b76645950e3ce952ba659e",
    },
  },
}
`;

exports[`FeatureFeed should query the home feed 1`] = `
Object {
  "data": Object {
    "homeFeedFeatures": Object {
      "features": Array [
        Object {
          "id": "HorizontalCardListFeature:9724110384a5109532f35a4980ea9b7732b56327ff3959d32d21ba892a0dc56083e6e9fbc0eb9c30e70418ef51dbf0a0a206c0039dd9ab293a5df0c1f07cdf27809952c976cf9886f157a1265307677bc875f2abdcfce4136c7ce952bc293761e816c7f3829d43e2b54a3297a1add52b",
        },
        Object {
          "id": "ActionListFeature:f6b30a38eb547f1f75676ce0557a7e05bed66de665564bd0c5e37f069267679550e6d23b01e068694595ba074cd0d145c3508d6249fc0adc58f325fa1e4621dfa28d6be47ee5711bc3110dd8c31d1e045c223357732b6f15ebde1237763d712279d3ab620bf416ae9a035a0ba171e5c4fecb9bfcb5ea92ea44148d7bd6731a9158ce9af2e56cb4be9ee86a3d8638a111",
        },
      ],
      "id": "FeatureFeed:c7035fd9677aa209cd4613df53e9c83a0fb3b9ecd853808383d135407161a17b98645698d03097766084632c51ea2eb271dbdadb1205a7012706cfd3d3a513fb",
    },
  },
}
`;
